Change directory structure

--- a/charts/snappass/values.yaml
+++ b/charts/snappass/values.yaml
@@ -32,7 +32,7 @@ ingress:
 
 environment:
   - name: REDIS_HOST
-    value: "redis-master"
+    value: "snappass-redis-master"
   - name: NO_SSL
     value: "True"
 
