--- a/charts/snappass/Chart.yaml
+++ b/charts/snappass/Chart.yaml
@@ -1,10 +1,19 @@
-apiVersion: v1
+apiVersion: v2
 appVersion: "1.0"
 description: Deploys pintrest's snappass
 name: snappass
 version: 0.1.0
 dependencies:
-- name: redis
-  version: 19.1.0
-  repository: "https://charts.bitnami.com/bitnami"
+  - name: redis
+    condition: redis.enabled
+    version: ~19.1
+    repository: https://charts.bitnami.com/bitnami
   
+
+
+# spec:
+#   initContainers:
+#   - name: wait-for-redis
+#     image: goodsmileduck/redis-cli
+#     imagePullPolicy: IfNotPresent
+#     args: [ 'sh', '-c', 'until redis-cli  -h redis-service.default.svc.cluster.local -p 6379  get hello; do echo "Sleeping a bit"; sleep 1; done; echo "ready!"; ' ]
