--- a/charts/snappass/templates/ingress.yaml
+++ b/charts/snappass/templates/ingress.yaml
@@ -23,12 +23,15 @@ spec:
 {{- end }}
   rules:
   {{- range .Values.ingress.hosts }}
-    - host: {{ .host | quote }}
-      http:
-        paths:
-          - path: /
-            backend:
-              serviceName: {{ $fullName }}
-              servicePort: 5000
+  - host: {{ .host | quote }}
+    http:
+      paths:
+      - backend:
+          service:
+            name: {{ $fullName }}
+            port:
+              number: 5000
+        path: /
+        pathType: ImplementationSpecific
   {{- end }}
 {{- end }}
